bug(testing): fix bug where frontend app and VUs would enter separate rooms.
Co-authored-by: Erik Margetis <erik.margetis@gmail.com>
Co-authored-by: Joseph Liang <j3liang@icloud.com>
Co-authored-by: Franco Waisfeld <Francowaisfeld@gmail.com>

--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "type": "module",
   "scripts": {
     "test": "artillery run syncosaurus-do-test.yml",
-    "debug": "DEBUG=ws artillery run syncosaurus-do-test.yml"
+    "debug": "DEBUG=ws artillery run syncosaurus-do-test.yml",
+    "presence": "artillery run --scenario-name PresenceData syncosaurus-do-test.yml",
+    "increment": "artillery run --scenario-name SubmitIncrement syncosaurus-do-test.yml"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "artillery": "^2.0.8",
+    "dotenv": "^16.4.5",
     "nanoid": "^5.0.6"
   }
 }
